[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "promptqueue"
version = "0.1.0"
description = "Dependency-free prompt scheduler for AI rate-limit resets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Atharva Maik" }]
keywords = ["ai", "automation", "scheduler", "claude", "codex", "chatgpt", "cursor", "gemini"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AtharvaMaik/PromptQueue"
Repository = "https://github.com/AtharvaMaik/PromptQueue"
Issues = "https://github.com/AtharvaMaik/PromptQueue/issues"

[project.scripts]
promptqueue = "promptqueue:main"

[tool.setuptools]
py-modules = ["promptqueue"]
